# glidrU_IPEDS_ingestion_pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.ini  pyproject.toml
config/: config.ini
docs/: gcp-setup.md  glidrU_background.md  sprint-2-prompt.md  sprint-3-plan.md  sprint-3-prompt.md
src/cli/: __init__.py  __main__.py  main.py
src/core/: config_manager.py
src/downloaders/: __init__.py  base_downloader.py  ipeds_downloader.py
src/extractors/: __init__.py  extraction_models.py  mdb_extractor.py
terraform/: infrastructure-details.txt  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: test_cli.py  test_config_manager.py  test_ipeds_downloader.py  test_mdb_extractor.py
